k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: weather-api-service
spec:
  type: LoadBalancer
  selector:
    app: weather-api
  ports:
    - protocol: TCP
      port: 80 
      targetPort: ${PORT}
